--- a/style.css
+++ b/style.css
@@ -24,9 +24,20 @@
   min-height: 90vh;
   margin: 5vh 5%;
   background: rgba(255, 255, 255, 0.85);
+  padding: 3%;
+  justify-content: space-around;
 }
 
-.input {
+.section-input,
+.section-output {
+  flex-basis: 40vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-content: center;
+}
+
+.section-output {
   flex-basis: 45vh;
 }
 
@@ -35,6 +46,69 @@
   font-size: 4rem;
 }
 
+.language {
+  display: flex;
+  margin: 3% 0;
+}
+
+.flag {
+  flex-basis: 20%;
+  margin-right: 10%;
+}
+
 .flag img {
-  width: 7rem;
+  width: 100%;
+}
+
+.word-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.user-input {
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid black;
+  font-family: 'Comfortaa', cursive;
+  font-weight: bold;
+  font-size: 2rem;
+  width: 100%;
+}
+
+.user-input:focus {
+  border: transparent;
+  border-bottom: 2px solid black;
+  outline: none;
+}
+
+.question {
+  display: flex;
+}
+
+.drawed-text {
+  align-self: center;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.btn {
+  margin: 3% 0;
+  padding: 2% 0;
+  border: none;
+  border-radius: 20px;
+  font-family: 'Comfortaa', cursive;
+  background-color: #fff;
+  font-size: 2.5rem;
+  font-weight: bold;
+  width: 40%;
+}
+
+.section-input .btn {
+  align-self: center;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-around;
 }
